# KickingProgram

./: README
EngineSample/: Makefile
PyOpt/: Graph400.ipynb  Pipfile  ex21.py  ex22.py  ex24.py  ex3.0.py  ex3.2.py  ex32knap.py  requirements.txt
StaticPage/: .babelrc  package-lock.json  package.json  webpack.config.js
StaticTest/: README.md  package-lock.json  package.json  webpack.config.js
connrpc-with-others/: Makefile  go.mod  go.sum
d3-example/: circle.html  circle.js
func-ai/: README.md
func-ai/alg/clang/: CMakeLists.txt  note.md  on.cpp  on2.cpp
func-ai/alg/clang/inc/: cli.h  cmd.h  ex1.h  ex3.h
func-ai/alg/clang/src/: cli.cpp  cmd.c  cmd.cpp  current_point.cpp  e31.cpp  main.cpp  on.cpp
generics-fun/: Makefile  g.java  gt.java  package-lock.json  package.json  pyproject.toml  slide.md  test_typ.py  typ.py  typ.test.ts  typ.ts
go-orm-cmp/: bun.go  docker-compose.yml  go.mod  go.sum  gorm.go
kind-mon/: Makefile  README.md
mcp-rs/: Cargo.toml
ml-py/: README.md
mon-ddl/: tool.sh
multi-jpa/: pom.xml
non-blocking/: echo_server.c  echo_server.m  fs_server.c  fs_server.m  makefile
phaser/: REAME.md
py-crawl/: crawl-rss.py
py-ut-project/: setup.py
rollup-vue/: index.html  package.json  rollup.config.js
storybook-nuxt/: README.md  nuxt.config.js  package-lock.json  package.json  tsconfig.json
syntax/: README.md  go.mod  parser.go  parser.y
tailwind-neumorphism/: index.html  package-lock.json  package.json  tailwind.config.js
terraform-to-start/: .terraform.lock.hcl  cmd.html  main.tf  makefile  terraform-how-to.md  (+1 more)
(+188 files in other folders)
