[tool.poetry]
name = "generics-fun"
version = "0.1.0"
description = ""
authors = ["YooWaan <no@mail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
